--- a/css/market.css
+++ b/css/market.css
@@ -40,7 +40,8 @@ label {
 
 input[type="text"],
 textarea,
-select {
+select,
+input[type="file"] {
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
@@ -68,13 +69,32 @@ button[type="submit"]:hover {
 }
 
 .resource-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border: 1px solid #ccc;
     padding: 10px;
+    text-align: center;
 }
 
 .resource-item img {
     max-width: 100%;
     height: auto;
+}
+
+.message-button {
+    background-color: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.message-button:hover {
+    background-color: #555;
 }
 
 footer {
