--- a/css/calendar.css
+++ b/css/calendar.css
@@ -97,3 +97,27 @@ img {
     max-width: 16px;
     height: auto;
 }
+
+#date-info {
+    background-color: #f7f7f7;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+    text-align: center;
+}
+
+#date-info h2 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+#selected-date-info {
+    font-size: 16px;
+    color: #333;
+}
+
+#event-calendar td:hover {
+    background-color: #f2f2f2;
+    cursor: pointer;
+}
