--- a/css/calendar.css
+++ b/css/calendar.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #0072BB;
     color: #fff;
     text-align: center;
     padding: 20px 0;
@@ -37,7 +37,7 @@ header h1 {
 }
 
 #event-calendar th {
-    background-color: #333;
+    background-color: #6987C9;
     color: #fff;
     font-size: 18px;
     border: 1px solid #ddd;
@@ -108,6 +108,7 @@ img {
 }
 
 #date-info h2 {
+    color: #6987C9;
     font-size: 20px;
     margin-bottom: 10px;
 }
