--- a/css/community-creation.css
+++ b/css/community-creation.css
@@ -6,10 +6,13 @@ body {
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    color: #0072BB;
     text-align: center;
     padding: 1rem 0;
+}
+
+h2 {
+    color: #6987C9;
 }
 
 main {
@@ -78,14 +81,14 @@ input[type="text"] {
 
 button {
     padding: 10px;
-    background-color: #333;
+    background-color: #0072BB;
     color: #fff;
     border: none;
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #555;
+    background-color: #6987C9;
 }
 
 .chat-form {
