Add color pallete to css files

--- a/css/emergency-info.css
+++ b/css/emergency-info.css
@@ -6,7 +6,7 @@ body {
 .container {
     max-width: 600px;
     margin: 0 auto;
-    background-color: #fff;
+    background-color: #DE9E36;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -15,6 +15,7 @@ body {
 
 h1 {
     text-align: center;
+    color: #0072BB;
 }
 
 table {
@@ -30,12 +31,12 @@ td {
 }
 
 th {
-    background-color: #333;
-    color: #fff;
+    background-color: #FFF;
+    color: #000;
 }
 
 tr:nth-child(even) {
-    background-color: #f2f2f2;
+    background-color: #FFF;
 }
 
 h1 {
@@ -43,5 +44,5 @@ h1 {
 }
 
 .add-info-link {
-    color: #007BFF;
+    color: #0072BB;
 }
