--- a/css/logIn.css
+++ b/css/logIn.css
@@ -1,6 +1,6 @@
 /* styles.css */
 body {
-    background-color: #f2f2f2;
+    background-color: #0072BB;
     font-family: Arial, sans-serif;
     display: flex;
     justify-content: center;
@@ -17,7 +17,7 @@ body {
 }
 
 .login-container {
-    background-color: #fff;
+    background-color: #FFF;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     text-align: center;
@@ -30,13 +30,13 @@ body {
 }
 
 h1 {
-    color: #333;
+    color: #0072BB;
     margin-bottom: 20px;
     font-size: 32px;
 }
 
 p {
-    color: #666;
+    color: #0072BB;
     margin-bottom: 20px;
 }
 
@@ -45,10 +45,14 @@ p {
     text-align: left;
 }
 
+p {
+    color: black;
+}
+
 label {
     display: block;
     margin-bottom: 5px;
-    color: #555;
+    color: #0072BB;
     font-weight: bold;
 }
 
@@ -56,13 +60,13 @@ input[type="text"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #000;
     border-radius: 3px;
 }
 
 button {
-    background-color: #007BFF;
-    color: #fff;
+    background-color: #0072BB;
+    color: #FFF;
     padding: 10px 20px;
     border: none;
     border-radius: 3px;
@@ -72,12 +76,12 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #6987C9;
 }
 
 .forgot-password a {
     text-decoration: none;
-    color: #007BFF;
+    color: #0072BB;
 }
 
 .forgot-password a:hover {
@@ -86,7 +90,7 @@ button:hover {
 
 .signup-link a {
     text-decoration: none;
-    color: #007BFF;
+    color: #0072BB;
 }
 
 .signup-link a:hover {
