--- a/css/registration.css
+++ b/css/registration.css
@@ -13,7 +13,7 @@ body {
     /* Adjust the top margin */
     padding: 10px;
     /* Reduce the padding */
-    background-color: #ffffff;
+    background-color: #FFF;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     display: flex;
@@ -23,6 +23,11 @@ body {
 
 h2 {
     text-align: center;
+    color: #0072BB;
+}
+
+label {
+    color: #0072BB;
 }
 
 label,
@@ -36,15 +41,15 @@ input[type="email"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #000;
     border-radius: 5px;
 }
 
 button {
     width: 150px;
     padding: 10px;
-    background-color: #007BFF;
-    color: #fff;
+    background-color: #0072BB;
+    color: #FFF;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -53,7 +58,7 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #6987C9;
 }
 
 .form-container {
@@ -66,7 +71,7 @@ button:hover {
     text-align: center;
 
     .log-in-thing {
-        color: #007BFF;
+        color: #0072BB;
     }
 
 }
