--- a/css/user-info.css
+++ b/css/user-info.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #FFF;
     margin: 0;
     padding: 0;
     background-size: 100%;
@@ -10,7 +10,7 @@ body {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #6987C9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
     padding-right: 40px;
@@ -18,6 +18,11 @@ body {
 
 h2 {
     text-align: center;
+    color: white;
+}
+
+label {
+    color: white;
 }
 
 label,
@@ -31,14 +36,14 @@ input[type="email"],
 input[type="password"] {
     width: 100%;
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #FFF;
     border-radius: 5px;
 }
 
 button {
     width: 150px;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: #F25757;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -47,5 +52,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #6987C9;
 }
