--- a/css/maps.css
+++ b/css/maps.css
@@ -4,16 +4,14 @@ body {
     padding: 20px;
 }
 
-header {
-    background-color: #110074;
-    color: #ffffff;
+h1 {
+
+    color: #0072BB;
     text-align: center;
     padding: 20px 0;
-}
-
-header h1 {
     font-size: 24px;
 }
+
 
 #mapa-stoppa {
     font-family: Arial, sans-serif;
