--- a/css/user-info.css
+++ b/css/user-info.css
@@ -6,9 +6,15 @@ body {
     background-size: 100%;
 }
 
+h1 {
+    color: #0072BB;
+    text-align: center;
+    padding: 20px 0;
+}
+
 #container {
     max-width: 400px;
-    margin: 50px auto;
+    margin: auto;
     padding: 20px;
     background-color: #6987C9;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
