--- a/css/calendar.css
+++ b/css/calendar.css
@@ -5,8 +5,7 @@ body {
 }
 
 h1 {
-    background-color: #0072BB;
-    color: #fff;
+    color: #0072BB;
     text-align: center;
     padding: 20px 0;
     font-size: 24px;
